(library
 (name kit)
 (modules action tasks fiber uid user history address server windows status
   message mode tabs rp kit prompt engine help window)
 (public_name kit)
 (libraries kit.task duration cri.lwt domain-name ipaddr ptime logs art fmt
   astring lwt lwd nottui notty kit.rb kit.rope))

(library
 (name rope)
 (modules rope)
 (public_name kit.rope))

(library
 (name rb)
 (modules rb)
 (public_name kit.rb))

(library
 (name implicit)
 (modules implicit)
 (public_name kit.implicit))
